-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 22, 23
-
Component/s: hotspot
-
b03
-
riscv
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8323300 | 22.0.1 | Gui Cao | P3 | Resolved | Fixed | b02 |
| JDK-8322577 | 22 | Gui Cao | P3 | Resolved | Fixed | b29 |
diff --git a/src/hotspot/cpu/riscv/macroAssembler_riscv.cpp b/src/hotspot/cpu/riscv/macroAssembler_riscv.cpp
index 3acc010ff85..02e0a195138 100644
--- a/src/hotspot/cpu/riscv/macroAssembler_riscv.cpp
+++ b/src/hotspot/cpu/riscv/macroAssembler_riscv.cpp
@@ -2771,7 +2771,7 @@ void MacroAssembler::load_reserved(Register dst,
break;
case uint32:
lr_w(dst, addr, acquire);
- zero_extend(t0, t0, 32);
+ zero_extend(dst, dst, 32);
break;
default:
ShouldNotReachHere();
index 3acc010ff85..02e0a195138 100644
--- a/src/hotspot/cpu/riscv/macroAssembler_riscv.cpp
+++ b/src/hotspot/cpu/riscv/macroAssembler_riscv.cpp
@@ -2771,7 +2771,7 @@ void MacroAssembler::load_reserved(Register dst,
break;
case uint32:
lr_w(dst, addr, acquire);
- zero_extend(t0, t0, 32);
+ zero_extend(dst, dst, 32);
break;
default:
ShouldNotReachHere();
- backported by
-
JDK-8322577 RISC-V: JDK-8315743 missed change in MacroAssembler::load_reserved
-
- Resolved
-
-
JDK-8323300 RISC-V: JDK-8315743 missed change in MacroAssembler::load_reserved
-
- Resolved
-
- relates to
-
JDK-8315743 RISC-V: Cleanup masm lr()/sc() methods
-
- Resolved
-
- links to
-
Commit
openjdk/jdk22/c249229b
-
Commit
openjdk/jdk/59073fa3
-
Review
openjdk/jdk22/19
-
Review
openjdk/jdk/17117
(2 links to)