8322154: RISC-V: JDK-8315743 missed change in MacroAssembler::load_reserved